avanzando con el proyecto

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -10,7 +10,8 @@ html{
     scroll-behavior: smooth;
 }
 body{
-    background-color: #ADD8E6;
+  background-color: #305139;
+//    background-color: #112A46;
     color:lightgray;
 }
 a{
