--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -10,8 +10,9 @@ html{
     scroll-behavior: smooth;
 }
 body{
-  background-color: #305139;
-//    background-color: #112A46;
+   background-color: #3c6447;
+  //background-color: #305139;
+  //background-color: #112A46;
     color:lightgray;
 }
 a{
